Se añade nuevo diferencial a la lista

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				 	<li class="items">Personal calificado</li>
 				 	<li class="items">Puntualidad</li>
 				 	<li class="items">Limpieza</li>
+				 	<li class="items">Limpieza</li>
 				 </ul><img src="img/diferenciales.jpg" class="img-diferencial">			 	
 			 </div>
 			 <div class="video">
